; ModuleID = '/home/carl/AnghaBench/linux/arch/arm64/crypto/extr_crct10dif-ce-glue.c_crct10dif_update_pmull_p8.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm64/crypto/extr_crct10dif-ce-glue.c_crct10dif_update_pmull_p8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }

@CRC_T10DIF_PMULL_CHUNK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*, i32*, i32)* @crct10dif_update_pmull_p8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @crct10dif_update_pmull_p8(%struct.shash_desc* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.shash_desc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.shash_desc*, %struct.shash_desc** %4, align 8
  %9 = call i32* @shash_desc_ctx(%struct.shash_desc* %8)
  store i32* %9, i32** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @CRC_T10DIF_PMULL_CHUNK_SIZE, align 4
  %12 = icmp uge i32 %10, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %3
  %14 = call i64 (...) @crypto_simd_usable()
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %13
  %17 = call i32 (...) @kernel_neon_begin()
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @crc_t10dif_pmull_p8(i32 %19, i32* %20, i32 %21)
  %23 = load i32*, i32** %7, align 8
  store i32 %22, i32* %23, align 4
  %24 = call i32 (...) @kernel_neon_end()
  br label %32

25:                                               ; preds = %13, %3
  %26 = load i32*, i32** %7, align 8
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @crc_t10dif_generic(i32 %27, i32* %28, i32 %29)
  %31 = load i32*, i32** %7, align 8
  store i32 %30, i32* %31, align 4
  br label %32

32:                                               ; preds = %25, %16
  ret i32 0
}

declare dso_local i32* @shash_desc_ctx(%struct.shash_desc*) #1

declare dso_local i64 @crypto_simd_usable(...) #1

declare dso_local i32 @kernel_neon_begin(...) #1

declare dso_local i32 @crc_t10dif_pmull_p8(i32, i32*, i32) #1

declare dso_local i32 @kernel_neon_end(...) #1

declare dso_local i32 @crc_t10dif_generic(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
